# curve-notebooks

./: .gitignore  .~lock.loans.csv#  bad_debt.ipynb  band_softliq_losses.ipynb  crv_emissions.ipynb  curve-weekly-top-markets.ipynb  get_data.ipynb  grouped_soft_liq_stats.csv  loan_stats.ipynb  n_range_softliq_losses.ipynb  pyproject.toml
abis/: LLAMMA.abi  OneWayLendingFactory.abi  controller.abi
crvusd-charts/: crvusd-charts.ipynb  crvusd-stats.csv
