[tool.poetry]
name = "curve-notebooks"
version = "0.1.0"
description = ""
authors = ["Saint Rat Wrongtail <saint-rat@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.31.0"
ipykernel = "^6.29.4"
pluck-graphql = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
